<resources>
    <string name="app_name" translatable="false">To Do List_v.0.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="to_do_empty">Your To Do list is Empty. Create new</string>
    <string name="new_to_do">New To Do</string>
    <string name="to_do_title">Title</string>
    <string name="to_do_note">Note</string>
    <string name="add">Add</string>
    <string name="todo_created">Todo Created</string>
    <string name="priority">Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_box">Check Box</string>
    <string name="edit_to_do">Edit To Do</string>
    <string name="save_changes">save changes</string>

    <!-- add words  -->
    <string name="note">Note</string>
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="a_new_todo">A new todo has been created! Stay focus!</string>

</resources>